--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1046,6 +1046,10 @@
 		Russian:"Выбор великого человека"
 	}
 
+	"Get ":{
+		Simplified_Chinese:"获得"
+	}
+
 	"Himeji Castle":{
 		Italian:"Castello di Himeji"
 		Simplified_Chinese:"姬路城"
