--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1370,7 +1370,7 @@
 		German:"Gibt +1 Zufriedenheit pro Sozialgrundsatz"
 		Dutch:"Levert 1 tevredenheid op per sociaal beleid"
 		Spanish:"Otorga 1 felicidad por cada política social"
-		Simplified_Chinese:"每项社会政策+1快乐"
+		Simplified_Chinese:"每项已推行的社会政策+1快乐"
 		Portuguese:"Provem 1 felicade por política social"
 		Polish:"+1 do zadowolenia z każdego ustroju społecznego"
 	}
