--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -301,37 +301,48 @@
 	}
 	
 	"Multiplayer":{
+		Italian:"Multigiocatore"
 	}
 	
 	"Could not download game!":{
+		Italian:"Impossibile scaricare partita!"
 	}
 	
 	"Could not upload game!":{
+		Italian:"Impossibile caricare partita"
 	}
 	
 	"Join Game":{
+		Italian:"Unisciti"
 	}
 	
 	"Invalid game ID!":{
+		Italian:"ID Partita non corretto"
 	}
 	
 	"Copy User Id":{
+		Italian:"Copia ID Utente"
 	}
 	
 	"Copy Game Id":{
+		Italian:"Copia ID Partita"
 	}
 	
 	/// tutorials for multiplayer
 	"To create a multiplayer game, check the 'multiplayer' toggle in the New Game screen, and for each human player insert that player's user ID.":{
+		Italian:"Per creare una partita multigiocatore, attiva la spunta su 'Multigiocatore' nella schermata Nuova Partita, e inserisci l'ID utente per del giocatore per ogni rispettivo giocatore umano"
 	}
 	
 	"You can assign your own user ID there easily, and othr players can copy their user IDs here and send them to you for you to include them in the game.":{
+		Italian:"Puoi assegnarvi facilmente il tuo ID Utente, e altri giocatori possono copiarvi il loro ID Utente e mandartelo per unirsi alla partita."
 	}
 	
 	"Once you've created your game, enter this screen again to copy the Game ID and send it to the other players.":{
+		Italian:"Una volta creata la tua partita, ritorna in questa schermata per copiare l'ID Partita e mandala ad altri giocatori."
 	}
 	
 	"Players can enter you game by copying the game ID to the clipboard, and clicking on the Join Game button":{
+		Italian:"I giocatori possono entrare nella tua partita copiando il codice ID sugli appunti e cliccando il tasto Unisciti."
 	}
 	
 	
@@ -461,15 +472,19 @@
 	////////////// Load map
 	
 	"Load map":{
+		Italian:"Carica mappa"
 	}
 	
 	"Are you sure you want to delete this map?":{
+		Italian:"Vuoi davvero cancellare questa mappa?"
 	}
 	
 	"Upload":{
+		Italian:"Carica"
 	}
 	
 	"Could not upload map!":{
+		Italian:"Impossibile caricare mappa!"
 	}
 	
 	////////////// Options
@@ -590,10 +605,12 @@
 	}
 	
 	"Auto-assign city production":{
+		Italian:"Autoassegna produzione città"
 		Simplified_Chinese:"自动分配城市产能"
 	}
 	
 	"Fontset":{
+		Italian:"Fontset"
 		Simplified_Chinese:"字体设置"
 	}
 
