--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -846,6 +846,7 @@
 	}
 
 	"Wu Zetian":{
+		Italian:"Wu Zetian" //Same as in Italian
 		Simplified_Chinese:"武则天"
 		Russian:"У Цзэтянь"
 	},
@@ -1165,14 +1166,16 @@
 		French:"Corée"
 		Portuguese:"Coréia"
 		Simplified_Chinese:"朝鲜"
-    Russian:"Корея"
+    		Russian:"Корея"
 	}
 
 	"Sejong":{
+		Italian:"Sejong"
 		Simplified_Chinese:"李裪"
 	}
 
 	"+2 Science for all specialists and Great Person tile improvements":{
+		Italian:"+2 Scienza per ogni specialista e ogni miglioramento da Gran Personaggio."
 		Simplified_Chinese:"所有专业人员和所有伟人设施+2科研"
 	}
 
