--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1163,7 +1163,8 @@
 		Russian:"Истребитель"
 	}
 
-	"Zero":{
+	"Zero":{//Japanese unique
+		Italian:"Zero"
 		Simplified_Chinese:"零式战斗机"
 	}
 
@@ -1176,6 +1177,12 @@
 		German:"Angriffshelikopter"
 		French:"Hélicoptère de combat"
 	}
+
+	/*
+	"Atomic Bomb":{
+		Italian:"Bomba atomica"
+	}
+	*/
 	
 ////// Information era - not even putting here, too far off
 
@@ -1185,6 +1192,23 @@
 		French:"Robot Mortel Géant" //The most accurate should be "Robot géant de la mort" but it sound really ridiculous
 		Simplified_Chinese:"末日机甲"
 	}
+	
+	"Stealth Bomber":{
+		Italian:"Bombardiere stealth"
+	}
+	
+	"Jet Fighter":{
+		Italian:"Caccia Jet"
+	}
+	
+	"Guided Missile":{
+		Italian:"Missile guidato"
+	}
+	
+	"Nuclear Missile":{
+		Italian:"Missile nucleare"
+	}
+	
 	*/
 	
 ////// Great units
